# tanga

./: README.md
jose-ffi/: README.md  ffigen.yaml  pubspec.yaml
jose-ffi/android/: build.gradle  settings.gradle
jose-ffi/android/src/main/: AndroidManifest.xml
jose-ffi/example/: README.md  pubspec.yaml
jose-ffi/example/android/app/: build.gradle
jose-ffi/example/android/app/src/main/: AndroidManifest.xml
jose-ffi/example/android/app/src/main/kotlin/io/github/gernotfeichter/jose_ffi_example/: MainActivity.kt
jose-ffi/example/lib/: main.dart
jose-ffi/example/linux/: CMakeLists.txt  my_application.cc
jose-ffi/example/linux/flutter/: generated_plugins.cmake
jose-ffi/lib/: generated_bindings.dart  jose_ffi.dart  jose_ffi_bindings_generated.dart
jose-ffi/linux/: CMakeLists.txt
jose-ffi/linux/flutter/ephemeral/: generated_config.cmake
jose-ffi/src/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  jose_ffi.c
jose-ffi/src/cmd/: CMakeLists.txt  cmake_install.cmake  jose.h  meson.build
jose-ffi/src/include/: CMakeLists.txt  cmake_install.cmake
jose-ffi/src/include/jose/: cmake_install.cmake
jose-ffi/src/lib/: CMakeLists.txt  cmake_install.cmake
tanga/: README.md  pubspec.yaml
tanga/android/app/: build.gradle
tanga/android/app/src/main/: AndroidManifest.xml
tanga/android/app/src/main/kotlin/io/github/gernotfeichter/tanga/: MainActivity.kt
tanga/linux/: CMakeLists.txt  my_application.cc
tanga/test/: widget_test.dart
test/: encrypt-decrypt.sh
